# plover-plugin-template

./: README.md  setup.cfg
plover_plugin_template/: gui.py
