[metadata]
name = plover-plugin-template
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
  setuptools>=30.3.0
install_requires =
  plover>=4.0.0.dev10
packages =
  plover_plugin_template

[options.entry_points]
plover.gui.qt.tool =
  template = plover_plugin_template.gui:Main
